# Ripple

./: .gitmodules  CMakeLists.txt  README.md
doc/: architecture.md  brainstorm.md  features_and_tasks.md  pipe_allocation.md
inc/Ripple/: datalink  link  netstack  network  packets  physical  session  shared  transport  user  utility
inc/Ripple/internal/: network  session  transport
inc/Ripple/netif/: loopback  nrf24l01  nrf24l01_types
src/: version.hpp
src/datalink/: CMakeLists.txt  data_link_arp.cpp  data_link_arp.hpp  data_link_driver.cpp  data_link_driver.hpp  data_link_service.cpp  data_link_service.hpp  data_link_types.hpp  data_link_utility.cpp  data_link_utility.hpp  link_thread.cpp  link_thread.hpp  link_types.hpp
src/netif/: CMakeLists.txt  device_intf.hpp  device_types.hpp
src/netif/loopback/: CMakeLists.txt  lb_adapter.cpp  lb_adapter.hpp  lbk_adapter.cpp
src/netif/nrf24l01/: CMakeLists.txt  cmn_memory_config.hpp
src/netif/nrf24l01/datalink/: CMakeLists.txt  data_link_arp.cpp  data_link_arp.hpp  data_link_frame.cpp  data_link_frame.hpp  data_link_service.cpp  data_link_service.hpp  data_link_types.hpp
src/netif/nrf24l01/nanopb/: CMakeLists.txt  shockburst.pb.c  shockburst.pb.h  shockburst.proto
src/netif/nrf24l01/physical/: CMakeLists.txt  phy_device_constants.hpp  phy_device_driver.cpp  phy_device_driver.hpp  phy_device_driver_virtual.cpp  phy_device_internal.cpp  phy_device_internal.hpp  phy_device_register.hpp  phy_device_types.hpp  phy_fsm_controller.cpp  phy_fsm_controller.hpp
src/netif/nrf24l01/physical/virtual_driver/: message_types.hpp  phy_device_driver_shockburst.cpp  phy_device_driver_shockburst.hpp  phy_device_driver_virtual.cpp  zmq_utils.cpp  zmq_utils.hpp
src/netstack/: CMakeLists.txt  config.hpp  context.cpp  context.hpp  net_mgr_intf.hpp  socket.cpp  socket.hpp  types.hpp
src/netstack/message/: message.hpp
src/netstack/network/: CMakeLists.txt
src/netstack/packets/: CMakeLists.txt  decoder.hpp  definitions_contract.hpp  encoder.cpp  encoder.hpp  fragment.cpp  fragment.hpp  packet.cpp  packet.hpp  types.hpp
src/netstack/session/: CMakeLists.txt  session_service.cpp  session_service.hpp  session_types.hpp
src/netstack/session/process/: process_establish_connection.cpp  process_intf.hpp  process_join_network.cpp  process_terminate_connection.cpp
src/netstack/transport/: CMakeLists.txt  transport_service.cpp  transport_service.hpp  transport_types.hpp
src/netstack/util/: CMakeLists.txt  fragment.hpp  fragment_sort.cpp  fragment_util.cpp  memory.hpp  sort.hpp
src/network/: CMakeLists.txt  net_thread.cpp  net_thread.hpp  net_types.hpp  network_types.hpp
src/physical/: CMakeLists.txt  phy_device_constants.hpp  phy_device_driver.cpp  phy_device_driver.hpp  phy_device_driver_virtual.cpp  phy_device_internal.cpp  phy_device_internal.hpp  phy_device_register.hpp  phy_device_types.hpp  phy_fsm_controller.cpp  phy_fsm_controller.hpp
src/session/: CMakeLists.txt  session_driver.cpp  session_driver.hpp  session_process.hpp  session_service.cpp  session_service.hpp  session_types.hpp  session_user.hpp
src/shared/: CMakeLists.txt  cmn_memory_config.hpp  cmn_types.hpp  cmn_utils.cpp  cmn_utils.hpp
src/transport/: CMakeLists.txt  transport_service.cpp  transport_service.hpp  transport_types.hpp
src/user/: CMakeLists.txt  user_contract.hpp  user_init.cpp  user_init.hpp  user_transaction.cpp  user_transaction.hpp
src/userif/: CMakeLists.txt  user_init.cpp  user_io.hpp
